<resources>
    <string name="app_name">Medicus</string>
    <string name="storage_screen_header">Personal Storage</string>
    <string name="tab_storage_all">All</string>
    <string name="tab_storage_trip">Trip</string>
    <string name="document_name_unknown">Unknown name</string>
    <string name="empty_storage_list">Empty list.\nTap + to add items</string>
    <string name="empty_state_entry_list">Empty list.</string>
    <string name="camera_button">Camera</string>
    <string name="gallery_button">Gallery</string>
    <string name="dialog_upload_header">Upload file to server</string>
    <string name="dialog_upload_content">Do you confirm uploading of the %s file?</string>
    <string name="dialog_upload_button_success">Upload</string>
    <string name="dialog_upload_button_cancel">Cancel</string>
    <string name="dialog_progress_upload_file">File uploading</string>
    <string name="please_wait">Please, wait&#8230;</string>
    <string name="dialog_progress_login">Check Account</string>
    <string name="dialog_progress_update_status">Update status</string>
    <string name="error_internet_not_available">No Internet access. Check the Internet connection or try later.</string>
    <string name="error_occurred">Error. Failed to connect to the server</string>
    <string name="error_file_not_found">Error. Can not find the chosen file</string>
    <string name="error_supported_file_format">Error. The unsupported format of the file is chosen. Supported format: JPG, PDF, DOC, DOCX, DCM, DICOM, ZIP</string>
    <string name="error_email_format">The entered email has wrong format</string>
    <string name="error_password_format">It can contain lower and upper case letters, numbers. From 6 to 20 symbols.</string>
    <string name="error_login">Error. Authorization failed. Check the accuracy of the entered data.</string>
    <string name="error_empty_login">Enter the username or Email</string>
    <string name="username_textview">Username</string>
    <string name="login_screen">Login</string>
    <string name="login_button">Log in</string>
    <string name="textview_password">Password</string>
    <string name="account_existence_notification">If you do not have an account,\nyou can create it on the website www.prod.inmedicus.ru</string>
    <string name="error_file_not_selected">Failed to choose the file</string>
    <string name="error_empty_phone">Enter the telephone number</string>
    <string name="success_file_uploding">The file was successfully uploaded</string>
    <string name="success_update_status">Status was successfully updated</string>
    <string name="success_update_all_statuses">All stuteses were successfully updated</string>
    <string name="buttonAccept">Accept</string>
    <string name="buttonChange">Request change</string>
    <string name="buttonCancel">Remove</string>
    <string name="buttonAcceptAll">Accept All</string>
    <string name="internal_storage">Internal storage</string>
    <string name="unknown_name">Unknown</string>
    <string name="dialog_select_language_header">Select language</string>
    <string name="dialog_language_button_choose">Choose</string>
    <string-array name="pref_list_language">
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="pref_list_language_values">
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string name="menu_storage">Storage</string>
    <string name="menu_sos">SOS</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_recommendation">Recommendation</string>
    <string name="menu_account">Account</string>
    <string name="menu_settings_title">Settings</string>
    <string name="category_language_settings">Language Settings</string>
    <string name="textview_hospital">Hospital</string>
    <string name="textview_med_service">Med Service</string>
    <string name="description_med_service">Please, evaluate the quality of\nmedical services</string>
    <string name="description_hospital">Please, evaluate the hospital </string>
    <string name="textview_impressions">Describe your impressions</string>
    <string name="feedback_send_message">Thank you!\nYour feedback/nwas successfully sent</string>
    <string name="sync_button">Sync with cloud</string>
    <string name="settings_screen_header">Settings</string>
    <string name="dialog_progress_sos">Request info</string>
    <string name="sos_request_callback">Request callback</string>
    <string name="sos_callback_requested">Callback is requested</string>
    <string name="sos_call_manager">Call Manager</string>
    <string name="select_phone">Select phone number</string>
    <string name="select_phone_help">If there is no number,\nenter your own\nin the field below</string>
    <string name="your_phone">Your phone number</string>
    <string name="dialog_sos_button_request">Request</string>
    <string name="dialog_sos_button_cancel">Cancel</string>
    <string name="calendar_screen_header">Calendar</string>
    <string name="medical_journal_header">Calendar</string>
    <string name="sync_journal_button">Sync with my webCabinet</string>
    <string-array name="tabs_headers">
        <item>Today</item>
        <item>My Calendar</item>
    </string-array>
    <string name="menstrual_calendar_title">Calendar</string>
    <string name="day_of_cycle"> day of cycle</string>
    <string name="menstrual_cycle_title">Menstrual Cycle</string>
    <string name="date_time_error">You can not edit day in future</string>
    <string name="option_intercourse">Intercourse</string>
    <string name="option_note">Note</string>
    <string name="option_symptoms">Symptoms</string>
    <string name="option_moods">Moods</string>
    <string name="option_menses_start">Have Period Started?</string>
    <string name="option_menstrual_flow">Flow</string>
    <string name="option_ovulation">Ovulation</string>
    <string name="option_temperature">Basal body temperature</string>
    <string name="tip_period_start">Tap to write down</string>
    <string name="estimated_duration">Estimated duration</string>
    <string name="expected_ovulation">The expected date of ovulation</string>
    <string name="header_note">Note</string>
    <string name="header_temperature">Basal body temperature</string>
    <string name="header_moods">Mood</string>
    <string name="header_symptoms">Symptoms</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="period_setting">Period Settings</string>
    <string name="day_after_ovulation"> d after ovulation</string>
    <string name="day_before_ovulation"> d before ovulation</string>
    <string name="day_ovulation">Ovulation Day</string>
    <string name="fertile_days">fertile days</string>
    <string name="infertile_days">infertile days</string>
    <string name="fertile_period">Fertile period</string>
    <string name="no_cycle">No information about your menstrual cycle</string>
    <string-array name="contraception">
        <item>Tablets</item>
        <item>Vaginal Ring</item>
        <item>Plaster</item>
        <item>Injections</item>
        <item>Emergency contraception</item>
    </string-array>
    <string-array name="contraception_settings_header">
        <item>Tablets setting</item>
        <item>Vaginal Ring setting </item>
        <item>Plaster setting</item>
        <item>Injections setting</item>
        <item>Emergency contraception setting</item>
    </string-array>
    <string-array name="contraception_settings_subheader">
        <item>Enter the day when you start taking tablets, active days and break days (or using placebo) </item>
        <item>Enter the day when you start using the vaginal ring,active days and break days </item>
        <item>Enter the day when you start using the plaster, active days and break days</item>
        <item>Enter the day when you start the injections and the time course of one injection</item>
        <item>Enter the day when you took the emergency contraception pill</item>
    </string-array>
    <string name="week">w</string>
    <string name="day">d</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="contraception_main_header">Contraception</string>
    <string name="contraception_subheader">Select type of birth control that you are using</string>
    <string name="notification_page_header">Notification setting</string>
    <string name="notification_subheader">Enter the time and the text of the taking contraception notification</string>
    <string name="start_date">Start date</string>
    <string name="active_days">Active days</string>
    <string name="passive_days">Break days</string>
    <string name="placebo">Placebo</string>
    <string name="placebo_description">Take placebo during break days,to develop the habit and do not forget about about daily tablets taking </string>
    <string name="start_time">Notification time</string>
    <string name="time_frequency">Repeat interval</string>
    <string name="notification_header">The title of notification</string>
    <string name="notification_text">The text of notification</string>
    <string-array name="contraception_notification_text">
        <item>Прими таблетку</item>
        <item>Поменяй кольцо</item>
        <item>Поменяй пластырь</item>
        <item>Сделай инъекцию</item>
        <item>Прими таблетку</item>
    </string-array>
    <string name="notification_text_pills">Прими таблетку</string>
    <string name="notification_text_ring">Поменяй кольцо</string>
    <string name="notification_text_plaster">Поменяй пластырь</string>
    <string name="notification_text_injection">Сделай инъекцию</string>
    <string name="notification_title_contraception">Напоминание о приеме контрацепции</string>
    <string name="cont_ring_start">Введите новое кольцо</string>
    <string name="cont_plaster_start">Примените новый пластырь</string>
    <string name="cont_pills_start">Начните принимать таблетки</string>
    <string name="cont_injection_start">Сделайте новую инъекцию</string>
    <string name="cont_ring_day">%1$d д использования кольца. </string>
    <string name="cont_plaster_day">%1$d-й пластырь. </string>
    <string name="cont_pills_day">%1$d таблетка из %2$d </string>
    <string name="cont_injection_day">%1$d д (%2$d нед) после инъекции. </string>
    <string name="cont_ring_end_day">Удалите кольцо</string>
    <string name="cont_plaster_end_week">Поменяйте платырь</string>
    <string name="cont_plaster_end_period">Удалите платырь</string>
    <string name="cont_injection_end_day">Сделайте новую инъекцию</string>
    <string name="break_days_will_start">, после чего начнутся дни перерыва</string>
    <string name="break_days">Дни перерыва.</string>
    <string name="after_n_days"> через %1$d д</string>
    <string name="tomorrow"> завтра</string>
    <string name="chart_title_temperature">Basal body temperature</string>
    <string name="chart_scale">Scale</string>
    <string name="chart_no_data">No entries for %1$s year</string>
    <string-array name="chart_period">
        <item>15 days</item>
        <item>30 days</item>
        <item>45 days</item>
    </string-array>
    <string name="header_aboutme">About me</string>
    <string name="chooser_header">Select application</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>