<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    style="@style/CalendarTheme">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/notification_page_header"
                android:id="@+id/tvNotification"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center_vertical" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swNotification"
                android:checked="true" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/llNotificationSettingBottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:id="@+id/tvTimeStartTitle"
                android:textSize="15sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="12:00"
                    android:id="@+id/tvTimeStart"
                    android:layout_weight="1"
                    android:gravity="center" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/ivClock"
                    android:src="@mipmap/ic_clock" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/time_frequency"
                    android:id="@+id/tvInterval"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="15sp" />

                <Spinner
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:id="@+id/spRepeatInterval" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification_header"
                android:id="@+id/tvNotificationName"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:paddingBottom="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNotificationName"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification_text"
                android:id="@+id/tvNotificationText"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:paddingBottom="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNotificationText"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>