<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightPrimary">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppLightTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:id="@+id/layoutLogoContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutInput"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:background="@drawable/circle_background"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/tvLogoHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="Medicus"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorLightEditTextHint" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="bottom|left"
            android:hint="@string/username_textview"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#f4f4f4"
            android:textSize="18sp"
            app:met_baseColor="#f4f4f4"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAlwaysShown="true"
            app:met_floatingLabelText="@string/login_screen"
            app:met_primaryColor="#fff"

            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="bottom|left"
            android:hint="@string/textview_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#fff"
            android:textSize="18sp"
            app:met_baseColor="#fff"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelAlwaysShown="true"
            app:met_floatingLabelText="Password"
            app:met_maxCharacters="20"
            app:met_minCharacters="6"
            app:met_primaryColor="#fff"
            app:met_singleLineEllipsis="true" />
    </LinearLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/layoutInput"
        android:layout_marginRight="32dp"
        app:mrl_rippleAlpha="0.5"
        app:mrl_rippleColor="@color/colorLightPrimary"
        app:mrl_rippleHover="true"
        app:mrl_rippleOverlay="true">

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/login_button"
            android:textColor="#fff" />
    </com.balysv.materialripple.MaterialRippleLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/account_existence_notification"
        android:textColor="#fff"
        android:textSize="11sp"
        android:id="@+id/tvCreateNewAccount" />


</RelativeLayout>